<resources>
    <string name="app_name1">Akhil Bhartiya Kulshrestha Maha Sabha</string>
    <string name="app_name1_hin">अखिल भारतीय कुलश्रेष्ठ महासभा</string>
    <string name="app_name">ABKMS</string>
    <string name="app_name2">ए.बी.के.एम.एस.</string>
    <string name="company_name">ASCEND WEB WORKS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="language_change">Language</string>
    <string name="AboutUs">About Us</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="strExit">Do you want to close the application?</string>
    <string name="alert">Alert</string>
    <string name="share">Share</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="accept_str">ACCEPT</string>
    <string name="deny_str">DENY</string>
    <string name="send">SEND</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="runtime_permissions_txt">Please enable ALL permissions from app settings.</string>
    <string name="permission_rationale">Please grant location permission to start the service</string>
    <string name="title_alert_no_intenet">No internet</string>
    <string name="msg_alert_no_internet">Please make sure that you have active internet connection.</string>
    <string name="btn_label_refresh">Refresh</string>
    <string name="permission_denied_explanation">You have not granted location permission. So the service cannot be started.</string>
    <string name="set">Set</string>
    <string name="entire_list">List of All Members</string>
    <string name="youngster_list">List of Youngsters</string>
    <string name="senior_citizen_list">List of Senior Citizens</string>
    <string name="ladies_list">List of Ladies Members</string>
    <string name="enter_search_term">Search By Name / Mobile No.</string>
    <string name="toolbar_title_text">Kulshrestha Family</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="member_name">Name - </string>
    <string name="village">Village - </string>
    <string name="age_gender">DOB/Age/Gender</string>
    <string name="address_full">Address - </string>
    <string name="house_no">House No. - </string>
    <string name="share_title">Details of Member</string>
    <string name="share_header1">Hello</string>
    <string name="share_header2">Your Family Details</string>
    <string name="share_matri_header2">Matrimony Profile Details</string>
    <string name="share_header3">----------Details----------</string>
    <string name="share_last">Thanks</string>
    <string name="by_city">By City</string>
    <string name="by_state">By State</string>
    <string name="by_mobile">By Mobile No.</string>
    <string name="total">Total</string>
    <string name="t_n_c">Terms and Conditions</string>
    <string name="tnc_acceptance">I accept terms and conditions</string>
    <string name="terms_n_condition_content">By using this software you must agree to following terms and conditions.\n
        1.This software is for voters,politicians and volunteers to help search voters and find their voting centers.\n
        2.After searching you must validate data in list published by government.\n
        3.If you share data through software,you must not disturb privacy of voters.\n
        4.Any misuse of software will be leads to legal action against you.\n
        5.While using this software and its feature , you must not violate any Aachar Sanhita (Model Code of Conduct) (आचार संहिता) Rules.\n
        6.While using survey module, it is responsibility of user to follow rules of survey and maintain privacy of voters as per law of local government and central government.\n
        7.If you misuse any feature provided in this software,you are totaly liable for any legal disputes occured.
    </string>
    <string name="please_wait">Please wait...</string>
    <string name="advance_search">Advance Search</string>
    <string name="surname">Surname</string>
    <string name="firstname">First Name</string>
    <string name="middlename">Middle Name</string>
    <string name="from_age">From Age</string>
    <string name="to_age">To Age</string>
    <string name="mobileno">Mobile No.</string>
    <string name="houseno">House No.</string>
    <string name="options">Options</string>
    <string name="shri_chirtra_guptah_chalisa">Shri Chitragupta Chalisa</string>
    <string name="arti_heading">Aarti of Shri Chitragupta</string>
    <string name="about_heading">Kulshresthas Information</string>
    <string name="chalisa_heading">Chalisa of Shri Chitragupta</string>
    <string name="pooja_process_heading">Shree Chitragupta Puja Vidhi</string>
    <string name="wallpaper_heading">Wallpapers of Shri Chitragupta</string>
    <string name="story_heading">Sri Chitragupta Vratakatha</string>
    <string name="famous_kulshrestha">President / Secretary of Affiliated Sabhas</string>
    <string name="arti">\9\9\9 श्री चित्रगुप्त जी की आरती\10 जय चित्रगुप्त यमेश तव,\10 \9शरणागतम शरणागतम।\10\10 जय पूज्य पद पद्मेश तव,\10 \9शरणागतम शरणागतम।।\10\10 जय देव देव दयानिधे, \10 \9जय दीनबन्धु कृपानिधे।\10\10 कर्मेश तव धर्मेश तव,\10 \9शरणागतम शरणागतम।।\10\10 जय चित्र अवतारी प्रभो,\10 \9जय लेखनी धारी विभो।\10\10 जय श्याम तन चित्रेश तव,\10 \9 शरणागतम शरणागतम।।\10\10 पुरुषादि भगवत अंश जय, \10 \9कायस्थ कुल अवतंश जय।\10\10 जय शक्ति बुद्धि विशेष तव,\10 \9 शरणागतम शरणागतम।।\10\10 जय विज्ञ मंत्री धर्म के,\10 \9 ज्ञाता शुभाशुभ कर्म के।\10\10 जय शांतिमय न्यायेश तव,\10 \9शरणागतम शरणागतम।।\10\10 हों दीन अनुरागी हरि,\10 \9 चाहे दया दृष्टि तेरी।\10\10 कीजै कृपा करुणेश तव,\10 \9 शरणागतम शरणागतम।।\10\10 तव नाथ नाम प्रताप से,\10 \9छुट जायें भय त्रय ताप से।\10\10 हों दूर सर्व क्लेश तव,\10 \9शरणागतम शरणागतम।।\10\10</string>
    <string name="pooja_vidhi">Chitragupta Pooja Vidhi \nPooja sthaan ko saaf kar ek chaukee par kapada vichha kar shree chitragupt jee ka photo sthaapit karen yadi chitr upalabdh na ho to kalash ko prateek maan kar chitragupt jee ko sthaapit karen. \n\nDeepak jala kar ganapati jee ko chandan ,haldee,rolee akshat ,doob ,pushp va dhoop arpit kar pooja archana karen. \n\nShree Chitragupt jee ko bhee chandan ,haldee,rolee akshat ,pushp va dhoop arpit kar pooja archana karen. \n\nPhal ,mithaee aur vishesh roop se is din ke lie banaaya gaya panchaamrt (doodh ,ghee kuchala adarak ,gud aur gangaajal )aur paan supaaree ka bhog lagaayen. \n\nIsake baad parivaar ke sabhee sadasy apanee kitaab,kalam,davaat aadi kee pooja karen aur chitragupt jee ke samaksh rakkhen.\n\nab parivaar ke sabhee sadasy ek safed kaagaj par eppan (chaaval ka aanta,haldee,ghee, paanee )va rolee se svastik banaayen. \n\nusake neeche paanch devee devataavon ke naam likhen ,jaise -shree ganesh jee sahaay namah ,shree chitragupt jee sahaay namah ,shree sarvadevata sahaay namah aadi \n\nisake neeche ek taraph apana naam pata va dinaank likhen aur doosaree taraph apanee aay vyay ka vivaran den,\n\nisake saath hee agale saal ke lie aavashyak dhan hetu nivedan karen ,phir apane hastaakshar karen. \n\nIs kaagaj aur apanee kalam ko haldee rolee akshat aur mithaee arpit kar poojan karen \n\n\nab shree chitragupt jee ka dhyaan karate hue nimn likhit mantr ka kam se kam 11 baar uchchaaran karen -\n\n\nमसीभाजन संयुक्तश्चरसि त्वम् ! महीतले  ।\n\nलेखनी कटिनीहस्त चित्रगुप्त नमोस्तुते ॥\n\nचित्रगुप्त ! मस्तुभ्यं लेखकाक्षरदायकं  ।\n\nकायस्थजातिमासाद्य चित्रगुप्त ! नामोअस्तुते ॥\n\nab sabhee sadasy shree chitragupt jee kee aaratee gaaven  .\n\n\nisake pashchaat khushee poorvak shree chitragupt jee maharaaj aur shree ganesh jee mahaaraaj se apane aur apane logon ke lie mangal aasheervaad praapt karate hue sheesh jhukaen evan prasaad ka vitaran karen.\n\n\n</string>
    <string name="events"><![CDATA[Events & Programs]]></string>
    <string name="pincode">Pincode -</string>
    <string name="address_1">Address 1 *</string>
    <string name="address_2">Address 2 *</string>
    <string name="address_3">Address 3</string>
    <string name="city">City -</string>
    <string name="state">State -</string>
    <string name="menu_logout">Logout</string>
    <string name="contact_us">Contact Us</string>
    <string name="update_profile">Update Profile</string>
    <string name="suggestions">Request OR Suggestions</string>
    <string name="donate">Donate</string>
    <string name="matrimony">Matrimony</string>
    <string name="jobs">JOBS</string>
    <string name="education">Education</string>
</resources>