<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/planning"
            android:title="@string/events" />

        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/list_icon"
            android:title="@string/list" />

        <item
            android:id="@+id/nav_education"
            android:icon="@drawable/education"
            android:title="@string/education" />

        <item
            android:id="@+id/nav_job"
            android:icon="@drawable/job"
            android:title="@string/jobs" />

        <item
            android:id="@+id/nav_matrimony"
            android:icon="@drawable/matrimony"
            android:title="@string/matrimony" />

        <item
            android:id="@+id/nav_donation"
            android:icon="@drawable/donation"
            android:title="@string/donate" />


        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_applications"
            android:title="@string/options" />



        <item
            android:id="@+id/nav_susggestion"
            android:icon="@drawable/ic_survey_voterapps"
            android:title="@string/suggestions" />

        <item
            android:id="@+id/nav_update_profile"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/update_profile"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_phone_android"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />

    </group>



</menu>
