<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include layout="@layout/toolback_with_back"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/CardPujaVidhi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:backgroundTint="@color/colorPrimaryLight"
                    android:background="@drawable/bg_actionbar"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/pooja_process_heading"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardVarthKatha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:backgroundTint="@color/colorPrimaryLight"
                    android:background="@drawable/bg_actionbar"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/story_heading"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardChalisa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:backgroundTint="@color/colorPrimaryLight"
                    android:background="@drawable/bg_actionbar"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/chalisa_heading"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardAarti"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:backgroundTint="@color/colorPrimaryLight"
                    android:background="@drawable/bg_actionbar"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/arti_heading"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/CardInfoOfKulshrestha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:backgroundTint="@color/colorPrimaryLight"
                    android:background="@drawable/bg_actionbar"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/about_heading"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/CardTerms_Condition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:layout_margin="10sp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:backgroundTint="@color/colorPrimaryLight"
                    android:background="@drawable/bg_actionbar"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/t_n_c"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

</LinearLayout>